src/App.css
.App {
  text-align: center;
  height: 100vh;
  width: 100vw;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

html, body {
  height: 100%;
  margin: 0;
  padding: 0;
  font-size: 14px;
}

#main {
  width: 100%;
  display: flex;
  flex-flow: row nowrap;
}

#map {
  /* TODO: Add media query to adjust map height at lower resolution */
  height: 100vh;
  max-height: 100vh;
  width: 80%;
  max-width: 80vw;
}

#sidebarContainer {
  background: lightblue;
  width: 20%;
  min-width: 20%;
  border-right: 1px solid rgba(0, 0, 0, 0.5);
  height: 100vh;
  max-height: 100%;
}

#sidebarHeader {
  color: salmon;
}

#venueList {
  list-style: none;
  padding: 1px;
}

.venueItem {
  font-size: 1rem;
  padding: .5rem;
  margin-top: 1rem;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
  cursor: pointer;
}

input {
  margin-left: 5px;
}


/* @media screen and (max-width: 900px) {
  #main {
    width: 60%;
  }

  #navContainer {
    width: 40%;
  }
}

@media screen and (max-width: 556px) { 
  #main {
    max-width: 70%;
  }

  #navContainer {
    width: 30%;
  }

  #nav {
    width: 100%;
  }
} */

